# aeirc

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: EnsureOutOfSourceBuild.cmake  FindApr.cmake  FindAprIconv.cmake  FindAprUtil.cmake  FindLibIntl.cmake  FindPDCurses.cmake  GettextHelpers.cmake
config/: aeircd.conf
src/aeirc-cui/: CMakeLists.txt  main.cpp  tui.cpp  tui.hpp  tui_internal.cpp  tui_internal.hpp  tui_types.cpp  tui_types.hpp  tuidemo.c
src/aeirc-gui/: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h
src/common/: Message.cpp  Message.hpp
src/libaeirc/: CMakeLists.txt  libaeirc.rc.in
